Added  driver info context menu entry

--- a/EUCBusBot/CMakeLists.txt
+++ b/EUCBusBot/CMakeLists.txt
@@ -6,14 +6,13 @@ cmake_minimum_required(VERSION 3.12)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 # Fügen Sie der ausführbaren Datei dieses Projekts eine Quelle hinzu.
-add_executable(EUCBusBot "EUCBusBot.cpp" "Bot.cpp" "ConfigManager.cpp" "BusReport.h" "BusReport.cpp" "ReportRecord.h" "ReportRecord.cpp" "Utility.h" "Driver.h" "Driver.cpp" "Utility.cpp")
+add_executable(EUCBusBot "EUCBusBot.cpp" "Bot.cpp" "ConfigManager.cpp" "BusReport.cpp" "ReportRecord.cpp" "Driver.cpp" "Utility.cpp")
 
 add_subdirectory(libs/DPP)
-
 set_property(TARGET EUCBusBot PROPERTY CXX_STANDARD 20)
 
-# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
 
+# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
 find_package(MySQLConnectorCPP REQUIRED)
 
 # Linking libraries
@@ -27,6 +26,3 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 	libs/DPP/include
 	${MYSQLCONNECTORCPP_INCLUDE_DIR}
 )
-
-add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
-add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
